<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!--MainActivity -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_section0">Eventi</string>
    <string name="title_section1">Archivio</string>
    <string name="title_section2">Impostazioni</string>
    <string name="txtMail">Scrivi qui il tuo Feedback</string>
    <string name="mailSubject">Party Manager Feedback</string>
    <string name="app_descrip">SFCoding</string>
    <string name="app_credits"><b>Developed by</b> \n Luca Rinaldi \n Federico Corò</string>

    <!-- Fragment Eventi -->
    <string name="emptyEventi">Non hai ancora Eventi</string>
    <string name="errEsciDaEvento">Errore nell\'uscire dall\'evento</string>

    <!--EventDomande -->
    <string name="dataE">Data Evento</string>
    <string name="orarioE">Orario Evento</string>
    <string name="orarioI">Orario Incontro</string>
    <string name="luogoE">Luogo Evento</string>
    <string name="luogoI">Luogo Incontro</string>
    <string name="pers">Personalizzata</string>
    <string name="dmndChiusa">Domanda SI/NO</string>

    <string name="persDH">Scrivi una domanda</string>
    <string name="persRH">Scrivi qui la tua risposta</string>
    <string name="luogoEHint">Scrivi qui il luogo</string>
    <string name="creazDom">Creazione Domanda</string>
    <string name="problInsDom">Problema nell\'inserimento nuova domanda</string>

    <!--CreaEventoActivity-->
    <string name="delEvento">Eliminare nuovo evento?</string>
    <string name="creazioneEvento">Creazione Evento</string>
    <string name="errCreazEvento">Problema nella creazione dell\'evento</string>
    <string name="chiudi">Chiudi</string>
    <string name="insrtNameE">Devi inserire un nome per l\'evento</string>
    <string name="insrtAE">Devi inserire almeno un amico</string>
    <string name="connAssente">Connessione assente</string>
    <string name="errFB">Problema sessione FB</string>
    <string name="riprova">Riprova</string>
    <string name="esci">Esci</string>
    <string name="esciCreaEvento">Premi ancora una volta per uscire</string>

    <!--Activity Profilo e FB-->
    <string name="app_id">401068586702319</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="title_activity_main_activity3">Profilo</string>
    <string name="instruction">Per poter utilizzare l\'applicazione bisogna accedere tramite facebook.
            Fai click sul tasto sotto per accedere</string>

    <!--Fragment Evento-->
    <string name="title_activity_crea_evento">Crea Evento </string>
    <string name="nome_evento">Nome evento</string>
    <string name="luogo">Luogo</string>
    <string name="quando">Quando</string>
    <string name="dove_vediamo">Dove ci vediamo</string>
    <string name="emptyDomande">Non ci sono ancora domande \n in questo evento</string>
    <string name="daDEf">[Da definire]</string>
    <string name="addFriends">Aggiungi</string>
    <string name="aggiuntaAmico">Invio richiesta …</string>
    <string name="errAggAmico">Errore aggiunta amico all\'evento</string>
    <string name="errDeleteFriend">Errore nell\'eliminazione user</string>
    <string name="errDeleteDomanda">Errore nella eliminazione della domanda</string>
    <string name="errDeleteRisposta">Errore nella eliminazione di una risposta</string>

    <!--Drawer-->
    <string-array name="list_names">
        <item>Impostazioni</item>
        <item>Feedback</item>
    </string-array>
    <array name="list_icons">
        <item>@drawable/ic_action_settings</item>
        <item>@drawable/ic_action_email</item>
    </array>
    <string-array name="list_names2">
        <item>Profilo</item>
        <item>Eventi</item>
        <item>Archivio</item>
    </string-array>
    <array name="list_icons2">
        <item>@drawable/com_facebook_inverse_icon</item>
        <item>@drawable/ic_stat_partymanagernotificationicon</item>
        <item>@drawable/ic_action_collection</item>
    </array>

    <!--HelperFacebook-->
    <string name="msgWebDialog">Scarica l\'app PartyManager</string>
    <string name="rqstCancelled">Richiesta cancellata</string>
    <string name="ntwError">Errore connessione</string>
    <string name="rqstSend">Richiesta inviata</string>

    <!-- Settings -->
    <string-array name="listArrayLED">
        <item>Bianco</item>
        <item>Rosso</item>
        <item>Giallo</item>
        <item>Verde</item>
        <item>Blu</item>
        <item>Viola</item>
    </string-array>
    <string-array name="listValuesLED">
        <item>16777215</item>
        <item>16711680</item>
        <item>16776960</item>
        <item>32768</item>
        <item>255</item>
        <item>8388736</item>
    </string-array>
    <string name="notifiche1">Abilita notifiche</string>
    <string name="notifiche2">Nuovo Evento</string>
    <string name="notifiche_sum2">Invito a nuovo evento</string>
    <string name="notifiche3">Nuova Domanda</string>
    <string name="notifiche_sum3">Creazione Nuova Domanda</string>
    <string name="notifiche4">Nuova Risposta</string>
    <string name="notifiche5">Ricorda evento</string>
    <string name="notifiche_sum5">Ricevi una notifica poco prima dell\'evento</string>
    <string name="notifiche6">Nuovo Utente</string>
    <string name="notifiche_sum6">Ingresso nuovo amico in un Evento</string>
    <string name="notifiche_sum7">Seleziona il colore del LED per le notifiche</string>
    <string name="notifiche8">Vibrazione</string>
    <string name="notifiche_sum8">Abilita vibrazione ricezione notifiche</string>
    <string name="notifiche9">Suoni</string>
    <string name="notifiche_sum9">Abilita suoni ricezione notifiche</string>

    <!-- DataProvide -->
    <string name="serverOffline">Il server è momentaneamente offline.\nCi scusiamo per il disagio</string>

    <!-- Dialog Risposte -->
    <string name="domanda">Domanda</string>
    <string name="no">NO</string>
    <string name="yes">SI</string>
    <string name="rispondi">Rispondi</string>

    <!-- InfoEvento -->
    <string name="titleInfoEvento">Info evento</string>
    <string name="membri">\u0020MEMBRI</string>
    <string name="errCambioNome">Errore nel cambiare nome all\'evento</string>
    <string name="errInsertDomanda">Errore nell\'inserimento di una risposta</string>
    <string name="errModChiusa">Errore nella modifica</string>

    <!-- GcmIntentService -->
    <string name="NotMsgNuovoEvento">\u0020 ti ha invitato a \u0020</string>
    <string name="NotMsgUtenteUscito">\u0020 è uscito dall\'evento \u0020</string>
    <string name="NotMsgEventoRinominato">\u0020 ha rinominato l\'evento \u0020</string>
    <string name="NotMsgEventoRinominato2">\u0020 in \u0020</string>
    <string name="NotMsgDomanda">\u0020 ha chiesto \u0020</string>
    <string name="NotMsgRisposta">\u0020 ha risposto \u0020 </string>
    <string name="NotMsgRisposta2">\u0020 alla domanda \u0020</string>
    <string name="NotMsgRisposta3">anche \u0020</string>
    <string name="NotMsgAddFriends">\u0020 sono stati aggiunti all\'evento \u0020</string>
    <string name="NotMsgAddFriendsSolo">è stato aggiunto all\'evento\u0020</string>
    <string name="NotMsgAddFriendsMe">sei stato invitato all\'evento\u0020</string>
    <string name="NotMsgDeleteFriend">\u0020 è stato rimosso dall\'evento \u0020</string>

    <!-- altro Bho -->
    <string name="hello_blank_fragment">Hello Archivio</string>
    <string name="action_settings">Impostazioni</string>
    <string name="new_event">Nuovo Evento</string>
    <string name="app_name">PartyManager</string>
    <string name="AttrAdapter">% ha votato questa risposta, \u0020</string>
    <string name="AttrAdapter2">\u0020 hanno risposto</string>
    <string name="FriendsAdapter">\u0020(ADMIN)</string>
    <string name="RisposteAdapter">Modifica</string>



</resources>
