<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="Notifiche">

        <CheckBoxPreference
            android:key="checkbox_notifiche_all"
            android:title="@string/notifiche1"/>

        <CheckBoxPreference
            android:key="checkbox_preference1"
            android:title="@string/notifiche2"
            android:summary="@string/notifiche_sum2" />

        <CheckBoxPreference
            android:key="checkbox_preference2"
            android:title="@string/notifiche3"
            android:summary="@string/notifiche_sum3" />

        <CheckBoxPreference
            android:key="checkbox_preference3"
            android:title="@string/notifiche4"/>

        <CheckBoxPreference
            android:key="checkbox_preference4"
            android:title="@string/notifiche5"
            android:summary="@string/notifiche_sum5" />

        <CheckBoxPreference
            android:key="checkbox_preference5"
            android:title="@string/notifiche6"
            android:summary="@string/notifiche_sum6" />

        <ListPreference
            android:title="LED"
            android:summary="@string/notifiche_sum7"
            android:key="downloadType"
            android:defaultValue="16777215"
            android:entries="@array/listArrayLED"
            android:entryValues="@array/listValuesLED" />

        <CheckBoxPreference
            android:key="checkbox_vibrate"
            android:title="@string/notifiche8"
            android:summary="@string/notifiche_sum8"
            android:defaultValue="true"/>

        <CheckBoxPreference
            android:key="checkbox_sound"
            android:title="@string/notifiche9"
            android:summary="@string/notifiche_sum9"
            android:defaultValue="true"/>

    </PreferenceCategory>


</PreferenceScreen>
