<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ddd"
    >

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/textView"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:text="@string/luogo"
            android:textStyle="bold"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/txt_luogo"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="5dp"
            android:textSize="16sp"
            android:hint="@string/daDEf"/>

        </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/textView2"
            android:text="@string/quando"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/txt_data"
            android:textSize="16sp"
            android:layout_marginLeft="30dp"
            android:hint="@string/daDEf"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/txt_orario"
            android:textSize="16sp"
            android:layout_marginLeft="15dp"
            android:hint="@string/daDEf"
            android:layout_marginTop="10dp"/>

        </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/textView3"
            android:text="@string/dove_vediamo"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="15dp"/>

        </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_dove_vediamo"
            android:textSize="16sp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="30dp"
            android:hint="@string/daDEf"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/txt_orarioI"
            android:layout_marginTop="5dp"
            android:textSize="16sp"
            android:layout_marginLeft="30dp"
            android:hint="@string/daDEf"/>

    </LinearLayout>
</LinearLayout>